--- a/IsPrimeForloopifandElse.html
+++ b/IsPrimeForloopifandElse.html
@@ -8,9 +8,8 @@
   </head>
 
   <body>
-    <input type="text" id="integer" size="3" value="" /><br />
-
-    <button type="button" onclick="numberGuessGame()" size="3">aguess</button>
+    <input type="text" id="candidate" size="3" value="" /><br />
+    <button type="button" onclick="isPrime()" size="3">average</button>
     <div id="output"></div>
     <script>
       /*
@@ -81,35 +80,35 @@
 
       // for (let count = 0; count < 5; count++)
       // document.getElementById("demo").innerHTML = " number:" + count;
-      //var i = parseInt(document.getElementById("numberBox").Value);
-      //sum += parseFloat(document.getElementById("numberBox" + sum).value);
-      function numberGuessGame() {
-        var i = parseInt(document.getElementById("integer").Value);
-        var message =
-          "I'm thinking of a number between 1 and 100." +
-          "Try to guess it! " +
-          "Please enter an integer between 1 and 100.";
-        var answer = 38;
-        var guess;
-        do {
-          guess = parseInt(prompt(message));
-          if (guess < answer) {
-            message = guess + " is too low. Please enter another integer.";
-          } else if (guess > answer) {
-            message = guess + " is too high. Please enter another integer.";
+
+      function isPrime() {
+        outputstring = "";
+        var candidate = parseInt(document.getElementById("candidate").value);
+        var limit = Math.sqrt(candidate);
+        var isPrime = true;
+        for (var divisor = 2; divisor <= limit; divisor++) {
+          var remainder = candidate % divisor;
+          if (remainder == 0) {
+            isPrime = false;
+            break;
           }
-        } while (guess != answer);
-        message = guess + " is correct!";
-        alert(message);
+        }
+
+        // Determine the output and show it to the user.
+        var output;
+        if (isPrime) {
+          output = candidate + " is prime";
+        } else {
+          output = candidate + " is not prime";
+        }
+        document.getElementById("output").innerHTML = output;
+
+        // Statements to be repeated go here.
+        //alert(i);
+        outputstring = +candidate;
+
+        document.getElementById("output").innerHTML = outputstring;
       }
-
-      //  sum += n;
-
-      // console.log(sum);
-
-      // Statements to be repeated go here.
-      //alert(i);
-      //outputstring = +sum;
     </script>
   </body>
 </html>
