--- a/getNumberfromUsersand useforlooptoAdd.html
+++ b/getNumberfromUsersand useforlooptoAdd.html
@@ -8,9 +8,17 @@
   </head>
 
   <body>
-    <input type="text" id="integer" size="3" value="" /><br />
-
-    <button type="button" onclick="numberGuessGame()" size="3">aguess</button>
+    <input type="text" id="numberBox1" size="3" value="" /><br />
+    <input type="text" id="numberBox2" size="3" value="" /><br />
+    <input type="text" id="numberBox3" size="3" value="" /><br />
+    <input type="text" id="numberBox4" size="3" value="" /><br />
+    <input type="text" id="numberBox5" size="3" value="" /><br />
+    <input type="text" id="numberBox6" size="3" value="" /><br />
+    <input type="text" id="numberBox7" size="3" value="" /><br />
+    <input type="text" id="numberBox8" size="3" value="" /><br />
+    <input type="text" id="numberBox9" size="3" value="" /><br />
+    <input type="text" id="numberBox10" size="3" value="" /><br />
+    <button type="button" onclick="sum10()" size="3">average</button>
     <div id="output"></div>
     <script>
       /*
@@ -81,35 +89,26 @@
 
       // for (let count = 0; count < 5; count++)
       // document.getElementById("demo").innerHTML = " number:" + count;
-      //var i = parseInt(document.getElementById("numberBox").Value);
-      //sum += parseFloat(document.getElementById("numberBox" + sum).value);
-      function numberGuessGame() {
-        var i = parseInt(document.getElementById("integer").Value);
-        var message =
-          "I'm thinking of a number between 1 and 100." +
-          "Try to guess it! " +
-          "Please enter an integer between 1 and 100.";
-        var answer = 38;
-        var guess;
-        do {
-          guess = parseInt(prompt(message));
-          if (guess < answer) {
-            message = guess + " is too low. Please enter another integer.";
-          } else if (guess > answer) {
-            message = guess + " is too high. Please enter another integer.";
+      function sum10() {
+        outputstring = "";
+        var sum = 0;
+        //var i = parseInt(document.getElementById("numberBox").Value);
+        //sum += parseFloat(document.getElementById("numberBox" + sum).value);
+        for (var i = 0; i < 10; i++) {
+          var n = parseFloat(prompt("Please enter a number"));
+          if (n == 0) {
+            break;
           }
-        } while (guess != answer);
-        message = guess + " is correct!";
-        alert(message);
+          sum += n;
+        }
+        console.log(sum);
+
+        // Statements to be repeated go here.
+        //alert(i);
+        outputstring = +sum;
+
+        document.getElementById("output").innerHTML = outputstring;
       }
-
-      //  sum += n;
-
-      // console.log(sum);
-
-      // Statements to be repeated go here.
-      //alert(i);
-      //outputstring = +sum;
     </script>
   </body>
 </html>
