--- a/whileLoopSum.html
+++ b/whileLoopSum.html
@@ -8,9 +8,9 @@
   </head>
 
   <body>
-    <input type="text" id="integer" size="3" value="" /><br />
+    <input type="text" id="numberBox1" size="3" value="" /><br />
 
-    <button type="button" onclick="numberGuessGame()" size="3">aguess</button>
+    <button type="button" onclick="sum10()" size="3">average</button>
     <div id="output"></div>
     <script>
       /*
@@ -81,35 +81,33 @@
 
       // for (let count = 0; count < 5; count++)
       // document.getElementById("demo").innerHTML = " number:" + count;
-      //var i = parseInt(document.getElementById("numberBox").Value);
-      //sum += parseFloat(document.getElementById("numberBox" + sum).value);
-      function numberGuessGame() {
-        var i = parseInt(document.getElementById("integer").Value);
-        var message =
-          "I'm thinking of a number between 1 and 100." +
-          "Try to guess it! " +
-          "Please enter an integer between 1 and 100.";
-        var answer = 38;
-        var guess;
-        do {
-          guess = parseInt(prompt(message));
-          if (guess < answer) {
-            message = guess + " is too low. Please enter another integer.";
-          } else if (guess > answer) {
-            message = guess + " is too high. Please enter another integer.";
-          }
-        } while (guess != answer);
-        message = guess + " is correct!";
-        alert(message);
+      function sum10() {
+        var i = parseInt(document.getElementById("numberBox1").Value);
+        outputstring = "";
+        var sum = 0;
+        //var i = parseInt(document.getElementById("numberBox").Value);
+        //sum += parseFloat(document.getElementById("numberBox" + sum).value);
+        var output = "0";
+        var i = 2;
+        while (i <= 10) {
+          output += ", " + i;
+          i += 2;
+        }
+        document.getElementById("output").innerHTML = output;
+
+        /*
+        function countDown() {
+    var output = "";
+    var skip = parseInt(document.getElementById('integer').value);
+    var i = 100;
+    while (i >= 0) {
+        output += i + "<br>";
+        i -= skip;
+    }
+    document.getElementById('output').innerHTML = output;
+
+        */
       }
-
-      //  sum += n;
-
-      // console.log(sum);
-
-      // Statements to be repeated go here.
-      //alert(i);
-      //outputstring = +sum;
     </script>
   </body>
 </html>
