--- a/6.29.downPayment.html
+++ b/6.29.downPayment.html
@@ -35,13 +35,13 @@
         let downPayment;
 
         if (cost >= 0 && cost <= 49999.99) {
-          downPayment = "( 5% * cost)";
+          downPayment = 0.05 * cost;
         } else if (cost >= 50000 && cost <= 99999.99) {
-          downPayment = "2,000 + 10% * (cost − 50,000)";
+          downPayment = 2000 + 0.1 * (cost - 50000);
         } else if (cost >= 100000 && cost <= 199999.99) {
-          downPayment = "7,500 + 20% * (cost − 100,000)";
+          downPayment = 7500 + 0.2 * (cost - 100000);
         } else if (cost >= 200000) {
-          downPayment = "27,500 + 25% * (cost − 200,000)";
+          downPayment = 27500 + 0.25 * (cost - 200000);
         } else {
           downPayment = "Not able to Apply for Loan";
         }
