--- a/fiveTimes2.html
+++ b/fiveTimes2.html
@@ -30,9 +30,8 @@ In a file named fiveTimes.html, write a program to display the five times table 
         */
 
       
-        // a will be the user Input assigned to user input text number
         let a = 5;
-        // let a = 5; // but i assigned as default value to text input becouse requirement is multiply by 5 but i also like to see it with other numbers.
+        // let a = 5;  assigned as default value 5
         let b;
         outputstring = "";
         //processing:
