--- a/fiveTimes2.html
+++ b/fiveTimes2.html
@@ -38,8 +38,9 @@ In a file named fiveTimes.html, write a program to display the five times table 
 
         for (let i = 1; i < 13; i++) {
           b = a * i;
-          outputstring += " " + a + "*" + i + "=" + b + "<br>";
-          console.log(" " + a + "*" + i + "=", +b + "<br>");
+          outputstring += '5 x ' + i + '=' + (i * 5) + '<br>';
+          //console.log(" " + a + "*" + i + "=", +b + "<br>");
+          　
           // document.write(" " + a + "*" + i + "=", +b + "<br>");
         }
         // output
