--- a/projectjs/7.5.Disneyland Autopia.html
+++ b/projectjs/7.5.Disneyland Autopia.html
@@ -18,9 +18,13 @@
       32 inches (81 cm) or taller and accompanied by a passenger 54 inches or taller
 
       Here is a JavaScript program that accepts the height of a driver and an optional passenger and
-      uses the logical operators || and && to determine if they may ride the Autopia. Notice the use
-      of parentheses in the if statement to ensure the logic is correct. The program outputs either
-      “Enjoy the ride!” or “Sorry, to drive a car on the Autopia you must be at least 54 inches tall
+      uses the logical operators || and && to determine if they may ride the Autopia. 
+      
+      Notice the use of parentheses in the if statement to ensure the logic is correct. 
+
+      The program outputs either“Enjoy the ride!” or “Sorry, 
+      
+      to drive a car on the Autopia you must be at least 54 inches tall
        or at least 32 inches tall and accompanied by a passenger who is at least 54 inches tall.”
               */
              /* Input: the height of a driver and an optional passenger
