--- a/projectjs/7.7.discountnew1.html
+++ b/projectjs/7.7.discountnew1.html
@@ -12,9 +12,13 @@
       /*
       Instructions
 You work for a retail store that wants to increase sales on Tuesday and Wednesday which are the store’s slowest sales days. 
-In a file named discount.html, write a program that takes a customer’s subtotal amount as input and if the subtotal is greater than $50
- and today is Tuesday or Wednesday, the program should subtract 10% from the subtotal. Your program should then compute and output the 
- total amount due by adding sales tax of 6% to the subtotal.
+In a file named discount.html, write a program that takes a customer’s subtotal amount as input and if the 
+
+subtotal is greater than $50and today is Tuesday or Wednesday,the program should subtract 10% from the subtotal.
+
+Your program should then compute and output the 
+
+total amount due by adding sales tax of 6% to the subtotal.
 
 You must use a compound condition and only one if block to solve this problem.
 
