--- a/projectjs/7.4.choosing-a-group-or-choosing -correct-class.html
+++ b/projectjs/7.4.choosing-a-group-or-choosing -correct-class.html
@@ -25,7 +25,7 @@ younger than 12	    Primary
  
 function chooseClass() {
 let age = parseInt(document.getElementById("age").value);
-let group
+let group;
 if (age <= 11) {
     group= "Primary";
 }
