--- a/projectjs/9.5.findPrimeforLoop.html
+++ b/projectjs/9.5.findPrimeforLoop.html
@@ -9,7 +9,7 @@
 
   <body>
     <input type="text" id="integer" size="3" value="" /><br />
-    <button type="button" onclick="isPrime()" size="3">average</button>
+    <button type="button" onclick="isPrime()" size="3">prime or not</button>
     <div id="output"></div>
     <script>
       /*
