--- a/quiz.html
+++ b/quiz.html
@@ -20,9 +20,13 @@
       &copy;2020 &bull; Thanush Ganesh &bull; BYU-Idaho &bull; CIT 160
     </footer>
     <script>
-let x = 2, y = 6, z = 5;
-let result = (x < 3 && (y < 7 ^ z != 3));
-document.getElementById('output').innerHTML = result ;
+outputstring = "";
+for (let i = 1; i < 9; i++) {
+
+  console.log(i + "count");
+  outputstring += 1;
+}
+document.getElementById("output").innerHTML = outputstring;
     </script>
   </body>
 </html>
