--- a/projectjs/6.11.footware-with-Question.html
+++ b/projectjs/6.11.footware-with-Question.html
@@ -28,6 +28,27 @@
   </footer>
   <script>
  function clothingLogic() {
+   /*
+   Instructions
+In a file named footwear.html, write a JavaScript program that helps a user choose the correct footwear for the day's weather. The table that follows shows the weather types the user may enter and what your program should output.
+Include code comments for input, processing, and output as part of your program planning.
+Share your code comments (pseudocode, or related) with others in the W06 🎈 Discussion: Developer Forum
+Be sure to review the program requirements below.
+Post and submit your URL for this program.
+
+Weather  	Foot Wear
+hot	sandals
+rain	galoshes
+snow	boots
+unknown	shoes
+Requirements
+Use the base template for the class as your starting point.
+Use an external JavaScript file and as always, store that file in your js or scripts folder.
+Use an HTML select element / combo box (Links to an external site.) to to guide the users selection to only the four given in the table.
+Be sure to add a default, non-selectable value to your select element.
+Use a button click to handle the selection OR you may respond to a valid selection from the select element.
+Validate the HTML (Links to an external site.)  and CSS.
+   */
     //INPUT - user selects weather list using a dropdown menu by clicking the weather
     let shoes;
     let weather = document.getElementById("weather-select").value;
