--- a/projectjs/6.5.calculator-with-Question.html
+++ b/projectjs/6.5.calculator-with-Question.html
@@ -34,6 +34,25 @@
         &copy;2021 &bull; Thanush Ganesh &bull; BYU-Idaho &bull; CIT 160
     </footer>
     <script>
+        /*
+Instructions
+In a file named calculator.html, write a JavaScript program to quiz a child on basic arithmetic. 
+The program must allow the user to enter two numbers and an arithmetic operator (+, - *, or /) 
+ANd must allow them to answer the problem. The program should compute the correct answer and 
+compare it to the user's answer and output either "Correct! 🏆" or "Incorrect 😢" 
+See the chapter reading, figure 6-15, for a simple example of a calculator form for this problem.
+Include code comments for input, processing, and output as part of your program planning.
+Share your code comments (pseudocode, or related) with others in the W06 🎈 Discussion: Developer Forum
+Be sure to review the program requirements below.
+Post and submit your URL for this program.
+
+Requirements
+Use the base template for the class as your starting point.
+Use an external JavaScript file and as always, store that file in your js or scripts folder.
+You must use a SWITCH statement in this problem.
+Use a button click to handle event of checking the math to produce one of the two outputs.
+Validate the HTML (Links to an external site.)  and CSS. 
+        */
         function checkAnswer() {
     //INPUT = Getting user inputs and assigning them to variables
     let number1 = parseFloat(document.getElementById('number1').value);
