--- a/quiz.html
+++ b/quiz.html
@@ -21,11 +21,13 @@
     </footer>
     <script>
 outputstring = "";
-for (let i = 1; i < 9; i++) {
+let x = 2 ,y =6 , z = 5;
+let result = ! (x < 3);
 
-  console.log(i + "count");
-  outputstring += 1;
-}
+
+  console.log(result);
+  outputstring += result;
+
 document.getElementById("output").innerHTML = outputstring;
     </script>
   </body>
