--- a/quiz.html
+++ b/quiz.html
@@ -29,13 +29,21 @@ let result = ! (x < 3);
   outputstring += result;
 
 document.getElementById("output").innerHTML = outputstring;
+
+/*
+outputstring = "";
+let x = 2 ,y =6 , z = 5;
+let result = ! (x < 3);
+
+
+  console.log(result);
+  outputstring += result;
+
+document.getElementById("output").innerHTML = outputstring;
+*/
     </script>
   </body>
 </html>
 
 
 
-
-let x = 2, y = 6, z = 5;
-let result = (x < 3 && (y < 7 ^ z != 3));
-document.getElementById('output').innerHTML = result ;
