--- a/projectjs/9.19.read2NumbersTrueOrFalse.html
+++ b/projectjs/9.19.read2NumbersTrueOrFalse.html
@@ -29,7 +29,7 @@
             
             
             //Both Of the numbers Greater Then five
-            if (one > 5 || two > 5) {
+            if (one > 5 && two > 5) {
                 output = "True";
             }
             //Sum is greater than 20
