--- a/quiz.html
+++ b/quiz.html
@@ -20,13 +20,13 @@
       &copy;2020 &bull; Thanush Ganesh &bull; BYU-Idaho &bull; CIT 160
     </footer>
     <script>
+
 outputstring = "";
-let x = 2 ,y =6 , z = 5;
-let result = ! (x < 3);
+for (let i = 1; i <= 3; i++) {
+}
 
-
-  console.log(result);
-  outputstring += result;
+  console.log(Goodbye);
+  outputstring += Goodbye;
 
 document.getElementById("output").innerHTML = outputstring;
 
