--- a/template.html
+++ b/template.html
@@ -14,8 +14,23 @@
             background-color: #f1faee;
         }
     </style>
-</head>
+    <script>
+        /* Assignment:
+    
+        ** Defining Table **
+          input:
+          processing:
+          output:
+        */
+        function templateFunctionName() {
+            let input = parseFloat(document.getElementById("giveName").value);
+            document.getElementById("giveName2").value;
+            let message = 'output message';
+            document.getElementById("outputDiv").innerHTML = message;
 
+        }
+    </script>
+</head>
 <body>
     <header>
         <h1>Week 4:Template </h1>
@@ -30,22 +45,7 @@
     <footer>
         &copy;2020 &bull; Thanush &bull; BYU-Idaho &bull; CIT 160
     </footer>
-    <script>
-        /* Assignment:
     
-        ** Defining Table **
-          input:
-          processing:
-          output:
-        */
-        function giveFunctionName() {
-            let input = parseInt(document.getElementById("giveName").value);
-            document.getElementById("giveName2").value;
-            let message = 'output message';
-            document.getElementById("outputDiv").innerHTML = message;
-
-        }
-    </script>
 </body>
 
 </html>
