--- a/loanCalculater.html
+++ b/loanCalculater.html
@@ -71,14 +71,20 @@
             let Intreset = parseInt(document.getElementById("Intreset").value);
             let NumberOfYears = parseInt(document.getElementById("NumberOfYears").value);
             let paymentPeryeare = parseInt(document.getElementById("paymentPeryear").value);
+
             let payment = computePayment(principal , Intreset,NumberOfYears,paymentPeryeare);
-       
             document.getElementById("outputDiv").innerHTML = payment;
               
         }
 
         function doBalance() {
-            let balance = computeBalance;
+            let principal = parseInt(document.getElementById("principal").value);
+            let annualRate = parseInt(document.getElementById("Intreset").value);
+            let years= parseInt(document.getElementById("NumberOfYears").value);
+            let periodsPerYear = parseInt(document.getElementById("paymentPeryear").value);
+            let numberOfPaymentsPaidToDate = parseInt(document.getElementById("numberofpaymentPaidtoDate").value);
+
+            let balance = computeBalance(principal, annualRate, years, periodsPerYear, numberOfPaymentsPaidToDate);
             document.getElementById("outputDiv1").innerHTML = balance;
 
         }
@@ -89,11 +95,16 @@
            // p = arnumberofpaymentPaidtoDate1 − (1 + r)−n 
         }
         function computeBalance(principal, annualRate, years, periodsPerYear, numberOfPaymentsPaidToDate) {
-            return  
-            // return b = a(1 + r)d - p((1 + r) d - 1) r
+            // return   principal * (1 + annualRate) ** - (numberOfPaymentsPaidToDate - periodsPerYear((1 + annualRate) * numberOfPaymentsPaidToDate - 1)) * annualRate ;
+            let r = annualRate / periodsPerYear;
+            let p = computePayment(principal,annualRate,years,periodsPerYear);
+            return principal *  (( 1 + r)** numberOfPaymentsPaidToDate) -
+               ( p *  ((1 + annualRate / periodsPerYear)**numberOfPaymentsPaidToDate )-1) / r;
+            // return b = a(1 + r)d -r
+            // p((1 + r) d - 1) r
 
             //where b is the balance or payoff amount, a is the loan amount, 
-          //r is the interest rate per period, p is the payment per period, and d is the number of payments paid to date.
+          //r is the interest rate per period, p is the payment per period, and d is the number of payments paid to date.// r is rate per period 
         }
 
 
