--- a/java-scirpt-study/84.10.return addition of these two arguments.html
+++ b/java-scirpt-study/84.10.return addition of these two arguments.html
@@ -15,6 +15,12 @@
         }
     </style>
     <script>
+        /*
+        function compute(x, y, z) {
+        }
+       let x = 7;
+       let result = compute(3,2,x);
+        */
           //how to pass arguments to the function 
           // primany machanism to pass information to the function called functions arguments  or PARAMETERS
           // ARGUMENTS OR PARAMETERS its like varibale ,its just used to pass values to the Functions
