--- a/windchill.html
+++ b/windchill.html
@@ -64,7 +64,7 @@
             else {
                 windchill = "wind chill is not calculated for temperatures above 50 degrees Fahrenheit or for wind speeds below 3 miles per hour" + " , " + "Please enter lesser amount ";
             }
-            document.getElementById("outputDiv").innerHTML = " wind chill factor is" + windchill;
+            document.getElementById("outputDiv").innerHTML = " wind chill factor is" + " , " + windchill;
         }
         
     
