--- a/windchill.html
+++ b/windchill.html
@@ -83,8 +83,8 @@
     </header>
     <Main>
         <h3>wind chill Calculation</h3>
-        degrees Fahrenheit: <input placeholder="Enter degrees Fahrenheit" type="text" id="Temperature" size="25" value="" /> <br />
-        wind speeds :  <input placeholder="Enter wind speed" type="text" id="WindSpeed" size="20" value="" /> <br />
+        degrees Fahrenheit: <input placeholder="Enter degrees Fahrenheit" type="text" id="Temperature"  value="" /> <br />
+        wind speeds :  <input placeholder="Enter wind speed" type="text" id="WindSpeed" value="" /> <br />
         <button type="button" onclick="doInputOutput()">calculate Wind Chill </button> <br />
         <div id="outputDiv"> </div>
     </Main>
