--- a/windchill.html
+++ b/windchill.html
@@ -62,7 +62,7 @@
                 windchill = windChill (temperature,windspeed)
             }
             else {
-                windchill = "not calculated for temperatures above 50 degrees Fahrenheit or for wind speeds below 3 miles per hour" + " , " + "Please enter lesser amount ";
+                windchill = "not calculated for temperatures above 50 degrees Fahrenheit or for wind speeds below 3 miles per hour" + " , " + "Please enter inputs as per the specification ";
             }
             document.getElementById("outputDiv").innerHTML = " wind chill factor is" + "  " + windchill;
         }
