--- a/loan.html
+++ b/loan.html
@@ -112,7 +112,7 @@
 </head>
 <body>
     <header>
-        <h1>Week 10:Loan calculato </h1>
+        <h1>Week 10:Loan calculator </h1>
         <h2>Thanush </h2>
     </header>
     <Main>
@@ -122,7 +122,7 @@
        Number of years: <input placeholder="Number Of Years" type="text" id="NumberOfYears" size="15" value="" /> <br />
        Payment per year : <input placeholder="Payment per year" type="text" id="paymentPeryear" size="15" value="" /> <br />
         <button type="button" onclick="doPayment()"> Compute Payment </button> <br />
-        number of payment Paid to Date : <input placeholder="number of payment Paid to Date" type="text" id="numberofpaymentPaidtoDate" size="15"
+        Number of payment Paid to Date : <input placeholder="number of payment Paid to Date" type="text" id="numberofpaymentPaidtoDate" size="15"
             value="" /> <br />
         <div id="outputDiv"> </div>
         <button type="button" onclick="doBalance()"> compute payoff Amount </button> <br />
